height fix on portfolio and white space removed.

--- a/portfolio.css
+++ b/portfolio.css
@@ -250,7 +250,6 @@ main {
 	  }
 	  #portfolio {
 	      background-color: #54575c;
-	      height: 1360px;
 	      overflow: auto;
 	      margin: 0 auto;
 	  }
